--- a/articulo.html
+++ b/articulo.html
@@ -17,8 +17,9 @@
     </nav>
 
 <head>
-    <img src="images/logo.png" alt="Logo Dulces detalles" class="logo">
-        
+    <div class="logo-container">
+        <img src="imagenes/logo.jpeg" alt="Logo" class="logo">
+    </div>
     <hr class="divider"> 
     <div class="nav-bar">
         <a href="index.html" class="nav-link">Inicio</a>
