cambios en el diseño

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
             <a href="Contacto.html" class="nav-link">Contacto</a>
         </div>
         <hr class="divider">
-        <h1>Bienvenidos a Dulces Detalles</h1>
-        <p></p>
     </header>
+             <h1>Bienvenidos a Dulces Detalles</h1>
+    
 
     <div class="carousel-container">
         <button id="prev">‹</button>
         <div class="carousel-inner">
-            <img src="imagenes/1carrucel.jpeg" alt="Imagen 1">
-            <img src="imagenes/1carrucel2.jpeg" alt="Imagen 2">
+            <img src="imagenes/carrucel (3).jpeg" alt="Imagen 1">
+            <img src="imagenes/desayuno (2).jpeg"alt="imagen2" >
             <img src="imagenes/1carrucel3.jpeg" alt="Imagen 3">
-            <img src="imagenes/WhatsApp Image 2024-10-04 at 6.45.48 PM.jpeg" alt="Imagen 4">
-            <img src="imagenes/WhatsApp Image 2024-10-04 at 6.45.52 PM(1).jpeg" alt="Imagen 5">
+            <img src="imagenes/carrucel.jpeg" alt="Imagen 4">
+            <img src="imagenes/carrucel (4).jpeg" alt="Imagen 5">
             <img src="imagenes/WhatsApp Image 2024-10-04 at 6.45.52 PM.jpeg" alt="">
         </div>
         <button id="next">›</button>
@@ -51,13 +51,16 @@
 
     <section>
         <h2>Sobre Nosotros</h2>
-        <p>Dulces Detalles nació en mayo del año 2020, en plena pandemia,cuando teniamos la nesecidad de juntarnos o de relagar algo por una fecha especial, nosotros lo elaboramos y lo enviabamos 
+        <p1>Dulces Detalles nació en mayo del año 2020, en plena pandemia,cuando teniamos la nesecidad de juntarnos o de relagar algo por una fecha especial, nosotros lo elaboramos y lo enviabamos 
             a los seres queridos 
-        </p>
+        </p1>
     </section>
 
     <footer>
-        <p>...</p>
+        <p>
+
+
+        </p>
     </footer>
     
     <script src="script.js"></script>
